[project]
name = "cpu-utilization-graphs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "psutil>=7.0.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
